--- a/Assignment2B/settings.properties
+++ b/Assignment2B/settings.properties
@@ -1,15 +1,15 @@
-#Sun Nov 13 16:57:41 PST 2016
+#Tue Nov 15 18:29:31 PST 2016
 debug=false
 omnivorechance=10
 filltext=none
 plantchance=30
-seed=1.478923182581E12
+seed=1.479261549685E12
 visiblelines=false
 worldsizey=50
 worldsizex=50
 carnivorechance=10
-gridtype=hex
-turnspeedms=100
+gridtype=square
+turnspeedms=10
 darkenpercent=80
 waterchance=3
 herbivorechance=25
