--- a/Assignment2B/settings.properties
+++ b/Assignment2B/settings.properties
@@ -1,14 +1,14 @@
-#Tue Nov 15 18:29:31 PST 2016
+#Wed Nov 16 20:16:57 PST 2016
 debug=false
 omnivorechance=10
 filltext=none
 plantchance=30
-seed=1.479261549685E12
-visiblelines=false
-worldsizey=50
-worldsizex=50
+seed=0
+visiblelines=true
+worldsizey=25
+worldsizex=25
 carnivorechance=10
-gridtype=square
+gridtype=hex
 turnspeedms=10
 darkenpercent=80
 waterchance=3
