--- a/Assignment2B/settings.properties
+++ b/Assignment2B/settings.properties
@@ -1,17 +1,18 @@
-#Wed Nov 16 20:16:57 PST 2016
-debug=false
-omnivorechance=10
+#Fri Nov 18 03:21:16 PST 2016
+debug=true
+cellradius=25
+omnivorechance=5
 filltext=none
-plantchance=30
+plantchance=10
 seed=0
-visiblelines=true
+visiblelines=false
 worldsizey=25
 worldsizex=25
 carnivorechance=10
 gridtype=hex
-turnspeedms=10
-darkenpercent=80
+turnspeedms=15
+darkenpercent=90
 waterchance=3
-herbivorechance=25
+herbivorechance=10
 evasivebufferdistance=1
 maxsensedistance=99
