changed all to enum

--- a/Assignment2B/settings.properties
+++ b/Assignment2B/settings.properties
@@ -1,18 +1,18 @@
-#Fri Nov 18 03:21:16 PST 2016
+#Sun Nov 20 17:10:21 PST 2016
 debug=true
-cellradius=25
+cellradius=20
 omnivorechance=5
-filltext=none
+filltext=coordinate
 plantchance=10
 seed=0
-visiblelines=false
-worldsizey=25
-worldsizex=25
+visiblelines=true
+worldsizey=20
+worldsizex=30
 carnivorechance=10
 gridtype=hex
 turnspeedms=15
 darkenpercent=90
-waterchance=3
+waterchance=5
 herbivorechance=10
 evasivebufferdistance=1
 maxsensedistance=99
