--- a/Assignment2B/settings.properties
+++ b/Assignment2B/settings.properties
@@ -1,13 +1,13 @@
-#Sun Nov 20 17:10:21 PST 2016
+#Sun Nov 20 20:36:01 PST 2016
 debug=true
 cellradius=20
 omnivorechance=5
-filltext=coordinate
+filltext=none
 plantchance=10
 seed=0
-visiblelines=true
-worldsizey=20
-worldsizex=30
+visiblelines=false
+worldsizey=33
+worldsizex=66
 carnivorechance=10
 gridtype=hex
 turnspeedms=15
