--- a/Assignment2B/settings.properties
+++ b/Assignment2B/settings.properties
@@ -1,18 +1,18 @@
-#Sun Nov 20 20:36:01 PST 2016
-debug=true
-cellradius=20
-omnivorechance=5
-filltext=none
-plantchance=10
-seed=0
-visiblelines=false
-worldsizey=33
-worldsizex=66
-carnivorechance=10
-gridtype=hex
-turnspeedms=15
+#Mon Nov 21 22:08:19 PST 2016
 darkenpercent=90
-waterchance=5
-herbivorechance=10
+worldrows=25
+seed=0
+worldcolumns=30
+plantchance=5
 evasivebufferdistance=1
+filltext=none
+debug=true
+herbivorechance=0
+cellradius=20
+omnivorechance=0
+gridtype=hex
+visiblelines=false
+waterchance=3
+carnivorechance=0
 maxsensedistance=99
+turnspeedms=15
