--- a/Assignment2B/settings.properties
+++ b/Assignment2B/settings.properties
@@ -1,18 +1,18 @@
-#Mon Nov 21 22:08:19 PST 2016
-darkenpercent=90
-worldrows=25
+#Sun Nov 27 19:16:58 PST 2016
+debug=false
+cellradius=30
+worldcolumns=20
+omnivorechance=10
+filltext=food
+plantchance=30
 seed=0
-worldcolumns=30
-plantchance=5
-evasivebufferdistance=1
-filltext=none
-debug=true
-herbivorechance=0
-cellradius=20
-omnivorechance=0
-gridtype=hex
-visiblelines=false
-waterchance=3
-carnivorechance=0
-maxsensedistance=99
+visiblelines=true
+carnivorechance=10
+gridtype=sq
 turnspeedms=15
+darkenpercent=80
+waterchance=3
+herbivorechance=25
+evasivebufferdistance=1
+worldrows=20
+maxsensedistance=99
