--- a/Assignment2B/settings.properties
+++ b/Assignment2B/settings.properties
@@ -1,18 +1,18 @@
-#Sun Nov 27 19:16:58 PST 2016
+#Mon Nov 28 01:46:12 PST 2016
 debug=false
-cellradius=30
-worldcolumns=20
+cellradius=20
+worldcolumns=25
 omnivorechance=10
-filltext=food
+filltext=none
 plantchance=30
 seed=0
-visiblelines=true
+visiblelines=false
 carnivorechance=10
-gridtype=sq
-turnspeedms=15
+gridtype=hex
+turnspeedms=50
 darkenpercent=80
 waterchance=3
 herbivorechance=25
 evasivebufferdistance=1
-worldrows=20
+worldrows=25
 maxsensedistance=99
